2000-04-21  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/gnome/dialog-edit.c: figure out all the accounts affected
	by a currency/security/type change and ask the user whether the
	needed changes should be made.

	* src/gnome/dialog-utils.c (gnc_fill_menu_with_data): also recurse
	for GNOME_APP_UI_SUBTREE_STOCK.

	* src/gnome/top-level.c (gnc_configure_reverse_balance): change
	asset-expense to all debit accounts.

	* src/register/numcell.c: include <limits.h> per Eric Hanchrow's
	fix.

2000-04-16  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/g-wrap/gnc.gwp: wrap functions for getting account guids and
	looking up accounts by guids.

	* src/g-wrap/gnc-helpers.c: add helper functions for using guids.

	* src/scm/prefs.scm: add an assets-expense choice to which kinds of
	accounts are sign-reversed.

	* src/gnome/top-level.c (gnc_configure_reverse_balance): handle the
	asset-expense choice.

2000-04-15  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/register/gnome/gnucash-style.c (gnucash_style_layout_init):
 	added a missing 'break' statement.

2000-04-14  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/engine/AccInfo.c: allow the price source to be set to NULL.

	* lots of build system files: changes for the global id stuff.

	* src/engine/GNCId.c: engine globally unique id api implementation.

	* src/engine/guid/md5.c: taken from GNU textutils.

	* src/engine/guid/guid.c: new file with routines for generating
	globally unique ids.

2000-04-10  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* doc/README: only the environment variable LANG needs to
	be set to change the locale.

2000-04-09  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/scm/srfi/srfi-1.r5rs.scm: renamed 'list-index' to
 	'list-index-pred'. guile-1.3.4 defines a list-index with
	different api and semantics.

	* configure.in: make gnucash.spec configured

	* rpm/gnucash.spec.in: new file, same as old gnucash.spec, but
	with @VERSION@ instead of a hard-coded version number. Removed